[gd_scene load_steps=32 format=2]

[ext_resource path="res://Assets/player-dies.png" type="Texture" id=1]
[ext_resource path="res://Source/Actors/Player.gd" type="Script" id=2]
[ext_resource path="res://Assets/dogica.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/player-sheet.png" type="Texture" id=4]
[ext_resource path="res://Assets/sounds/geleia_attack.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/sounds/Jump.wav" type="AudioStream" id=6]
[ext_resource path="res://Assets/sounds/player_die.wav" type="AudioStream" id=7]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 31, 16 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 31, 0, 31, 16 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 186, 0, 31, 16 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 217, 0, 31, 16 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 31, 16 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 31, 0, 31, 16 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 62, 0, 31, 16 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 93, 0, 31, 16 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 124, 0, 31, 16 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 155, 0, 31, 16 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 186, 0, 31, 16 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 217, 0, 31, 16 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 248, 0, 31, 16 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 279, 0, 31, 16 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 310, 0, 31, 16 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 4 )
region = Rect2( 93, 0, 31, 16 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 4 )
region = Rect2( 124, 0, 31, 16 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 4 )
region = Rect2( 155, 0, 31, 16 )

[sub_resource type="SpriteFrames" id=19]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 3.5
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "run",
"speed": 7.0
}, {
"frames": [ SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "dead",
"speed": 20.0
}, {
"frames": [ SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": false,
"name": "attack",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=20]
extents = Vector2( 2.14558, 6.25922 )

[sub_resource type="RectangleShape2D" id=21]
extents = Vector2( 1.68402, 3.84555 )

[sub_resource type="RectangleShape2D" id=22]
extents = Vector2( 2.93177, 1.70975 )

[sub_resource type="RectangleShape2D" id=23]
extents = Vector2( 8.25012, 6.91965 )

[sub_resource type="DynamicFont" id=24]
size = 8
font_data = ExtResource( 3 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 9
script = ExtResource( 2 )
speed = Vector2( 180, 280 )

[node name="Anima" type="AnimatedSprite" parent="."]
position = Vector2( 0, -8.01784 )
frames = SubResource( 19 )
animation = "dead"
frame = 7
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.102093, -6.27877 )
shape = SubResource( 20 )

[node name="Area_detector" type="Area2D" parent="."]
visible = false
position = Vector2( 0, 1.2561 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area_detector"]
modulate = Color( 0.243137, 1, 0, 1 )
position = Vector2( 0.131943, -8.57625 )
shape = SubResource( 21 )

[node name="enemy_detector" type="Area2D" parent="."]
scale = Vector2( 0.591715, 3.43388 )
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy_detector"]
position = Vector2( 0.00873375, -1.76369 )
shape = SubResource( 22 )

[node name="attack_area" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack_area"]
position = Vector2( 7.7564, -6.86144 )
shape = SubResource( 23 )
disabled = true

[node name="cantdo" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -11.371
margin_top = -26.0994
margin_right = 41.629
margin_bottom = -0.0994415
custom_fonts/normal_font = SubResource( 24 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sounds" type="Node" parent="."]

[node name="sound_jump" type="AudioStreamPlayer" parent="sounds"]
stream = ExtResource( 6 )
volume_db = -7.068
pitch_scale = 1.31

[node name="sound_attack" type="AudioStreamPlayer" parent="sounds"]
stream = ExtResource( 5 )
volume_db = -5.049
pitch_scale = 1.35

[node name="sound_death" type="AudioStreamPlayer" parent="sounds"]
stream = ExtResource( 7 )
volume_db = -6.058

[node name="attack_cd" type="Timer" parent="."]
wait_time = 0.5
[connection signal="animation_finished" from="Anima" to="." method="_on_Anima_animation_finished"]
[connection signal="area_entered" from="Area_detector" to="." method="_on_Area_detector_area_entered"]
[connection signal="area_exited" from="Area_detector" to="." method="_on_Area_detector_area_exited"]
[connection signal="body_entered" from="enemy_detector" to="." method="_on_enemy_detector_body_entered"]
[connection signal="timeout" from="attack_cd" to="." method="_on_attack_cd_timeout"]
